name:                   tee-io
version:                0.0.0
cabal-version:          >= 1.8
build-type:             Simple

flag library-only
    description:        Build for use with "yesod devel"
    default:            False

library
    hs-source-dirs:     src, app
    exposed-modules:    Data.Time.Duration
                        Network.S3URL
                        Application
                        Foundation
                        Import
                        Import.NoFoundation
                        Token
                        Model
                        Settings
                        Settings.StaticFiles
                        Handler.Common
                        Handler.Home
                        Handler.Command
                        Handler.Output
                        Archive
                        CommandContent
                        Worker

    if flag(library-only)
        ghc-options:    -Wall -Werror -fwarn-tabs -O0
    else
        ghc-options:    -Wall -Werror -fwarn-tabs -O2

    extensions:         DeriveDataTypeable
                        EmptyDataDecls
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        NoImplicitPrelude
                        NoMonomorphismRestriction
                        OverloadedStrings
                        QuasiQuotes
                        RecordWildCards
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        ViewPatterns

    build-depends:      base
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , bytestring
                      , classy-prelude
                      , classy-prelude-conduit
                      , classy-prelude-yesod
                      , conduit
                      , conduit-extra
                      , containers
                      , data-default
                      , directory
                      , esqueleto
                      , fast-logger
                      , file-embed
                      , heroku-persistent
                      , hjsmin
                      , http-conduit
                      , http-types
                      , lens
                      , load-env
                      , monad-control
                      , monad-logger
                      , network-uri
                      , persistent
                      , persistent-postgresql
                      , random
                      , safe
                      , scientific
                      , shakespeare
                      , template-haskell
                      , text
                      , time
                      , time-units
                      , transformers
                      , unordered-containers
                      , uuid
                      , vector
                      , wai
                      , wai-extra
                      , wai-logger
                      , warp
                      , websockets
                      , yaml
                      , yesod
                      , yesod-core
                      , yesod-static
                      , yesod-websockets

executable              tee-io
    if flag(library-only)
        buildable:      False

    main-is:            main.hs
    hs-source-dirs:     app
    build-depends:      base
                      , tee-io

    ghc-options:       -Wall -Werror -threaded -O2 -rtsopts -with-rtsopts=-N

executable              tee-io-worker
    if flag(library-only)
        buildable:      False

    main-is:            main-worker.hs
    hs-source-dirs:     app
    build-depends:      base
                      , tee-io

    ghc-options:        -Wall -Werror -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    ghc-options:        -Wall -Werror

    extensions:         DeriveDataTypeable
                        EmptyDataDecls
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        NoImplicitPrelude
                        NoMonomorphismRestriction
                        OverloadedStrings
                        QuasiQuotes
                        RecordWildCards
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        ViewPatterns

    build-depends:      base
                      , tee-io
                      , hspec
                      , hspec-expectations-lifted
                      , aeson
                      , amazonka
                      , amazonka-s3
                      , bytestring
                      , classy-prelude
                      , http-types
                      , lens
                      , load-env
                      , persistent
                      , shakespeare
                      , uuid
                      , wai-extra
                      , yesod
                      , yesod-core
                      , yesod-persistent
                      , yesod-test
