name:                   tee-io
version:                0.0.0
cabal-version:          >= 1.8
build-type:             Simple

flag dev
    description:        Turn auto-reload templates.
    default:            False

flag library-only
    description:        Build for use with "yesod devel"
    default:            False

library
    hs-source-dirs:     src, app
    exposed-modules:    Data.Time.Duration
                        Network.PGDatabaseURL
                        Network.S3URL
                        Application
                        Foundation
                        Import
                        Import.NoFoundation
                        Token
                        Model
                        Settings
                        Settings.StaticFiles
                        Handler.Common
                        Handler.Home
                        Handler.Command
                        Handler.Output
                        Archive
                        CommandContent
                        Worker

    if flag(dev) || flag(library-only)
        cpp-options:    -DDEVELOPMENT
        ghc-options:    -Wall -Werror -fwarn-tabs -O0
    else
        ghc-options:    -Wall -Werror -fwarn-tabs -O2

    extensions:         CPP
                        DeriveDataTypeable
                        EmptyDataDecls
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        NoImplicitPrelude
                        NoMonomorphismRestriction
                        OverloadedStrings
                        QuasiQuotes
                        RecordWildCards
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        ViewPatterns

    build-depends:      base
                      , aeson
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , bytestring
                      , classy-prelude
                      , classy-prelude-conduit
                      , classy-prelude-yesod
                      , conduit
                      , conduit-extra
                      , containers
                      , data-default
                      , directory
                      , esqueleto
                      , fast-logger
                      , file-embed
                      , foreign-store
                      , hjsmin
                      , http-conduit
                      , http-types
                      , lens
                      , monad-control
                      , monad-logger
                      , network-uri
                      , persistent
                      , persistent-postgresql
                      , random
                      , safe
                      , scientific
                      , shakespeare
                      , template-haskell
                      , text
                      , time
                      , time-units
                      , transformers
                      , unordered-containers
                      , uuid
                      , vector
                      , wai
                      , wai-extra
                      , wai-logger
                      , warp
                      , websockets
                      , yaml
                      , yesod
                      , yesod-core
                      , yesod-static
                      , yesod-websockets
                      , HTTP

executable              tee-io
    if flag(library-only)
        buildable:      False

    main-is:            main.hs
    hs-source-dirs:     app
    build-depends:      base
                      , tee-io

    ghc-options:       -Wall -Werror -threaded -O2 -rtsopts -with-rtsopts=-N

executable              tee-io-worker
    if flag(library-only)
        buildable:      False

    main-is:            main-worker.hs
    hs-source-dirs:     app
    build-depends:      base
                      , tee-io

    ghc-options:        -Wall -Werror -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    ghc-options:        -Wall -Werror

    extensions:         CPP
                        DeriveDataTypeable
                        EmptyDataDecls
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        NoImplicitPrelude
                        NoMonomorphismRestriction
                        OverloadedStrings
                        QuasiQuotes
                        RecordWildCards
                        TemplateHaskell
                        TupleSections
                        TypeFamilies
                        ViewPatterns

    build-depends:      base
                      , tee-io
                      , hspec
                      , hspec-expectations-lifted
                      , aeson
                      , amazonka
                      , amazonka-s3
                      , bytestring
                      , classy-prelude
                      , http-types
                      , lens
                      , persistent
                      , shakespeare
                      , uuid
                      , wai-extra
                      , yesod
                      , yesod-core
                      , yesod-persistent
                      , yesod-test
